--- a/static/custom.css
+++ b/static/custom.css
@@ -5,3 +5,11 @@
 #max_page_input{
     padding-right: 0px;
 }
+
+button[type=submit]{
+    margin-top: 10px;
+}
+
+.bg-danger{
+    margin-bottom: 10px!important;
+}
