--- a/templates/index.html
+++ b/templates/index.html
@@ -106,8 +106,11 @@
                 </table>
             </div>
         </div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            {{ bsObj_test }}
+        </div>
 
-        <!-- jQuery
+        <!-- jQuery -->
         <script src="{{ url_for('static', filename='libs/jquery/dist/jquery.min.js') }}"></script>
         <!-- Bootstrap JavaScript -->
         <script src="{{ url_for('static', filename='libs/bootstrap/dist/js/bootstrap.min.js') }}"></script>
