--- a/templates/index.html
+++ b/templates/index.html
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <!-- <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <h2>Debug</h2>
             <div class="table-responsive">
                 <table class="table table-hover">
@@ -113,7 +113,7 @@
                     </tbody>
                 </table>
             </div>
-        </div>
+        </div> -->
 
         <!-- jQuery -->
         <script src="{{ url_for('static', filename='libs/jquery/dist/jquery.min.js') }}"></script>
